--- a/strapi/package.json
+++ b/strapi/package.json
@@ -17,6 +17,7 @@
     "@strapi/strapi": "5.10.2",
     "better-sqlite3": "11.3.0",
     "fs-extra": "^10.0.0",
+    "knex": "^3.1.0",
     "mime-types": "^2.1.27",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
